feature/add detail-ticket
